# sakkara

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/source/: conf.py  index.rst
docs/source/components/: composable.rst  data.rst  deterministic.rst  distribution.rst  fixedvalue.rst  function.rst  group.rst  hierarchical.rst  likelihood.rst  math_op.rst  minibatch.rst  model.rst  reshaper.rst  series.rst
docs/source/miscellaneous/: build.rst  data_components.rst  function_wrapper.rst
docs/source/relation_utils/: group.rst  groupset.rst  (+1 more)
examples/: heating.ipynb  heating_new.ipynb  state_space_model.ipynb
hierlinreg/: hierarchical.py  linear.py  linreg.py  relation.py
sakkara/: linreg.py  model.py  relation.py
sakkara/model/: __init__.py  base.py  components.py  composite.py  deterministic.py  function.py  function_wrapper.py  math_op.py  minibatch.py  multi_component.py  single_component.py  utils.py  wrapper.py
sakkara/relation/: atomicnode.py  cellnode.py  composite.py  compositegroup.py  group.py  groupset.py  node.py  nodepair.py  ordered.py  representation.py  utils.py
tests/: conftest.py  test_hierarchical.py  test_linear.py  test_linreg.py  test_model.py  test_relation.py  test_state_space.py
tests/components/: test_deterministic_component.py  test_distribution_component.py  test_function_component.py  test_group_component.py  test_likelihood.py  test_math.py  test_minibatch.py  test_model.py  test_relation.py
tests/fixtures/: hierarchical_dfs.py  simple_df.py
tests/workflows/: test_linreg.py  test_minibatch_vi.py  test_state_space.py
(+16 files in other folders)
