[tool.poetry]
name = "sakkara"
version = "0.1.0"
description = "Tools for hierarchical modelling with PyMC"
authors = ["Henrik Håkansson <henrik.hakansson@fcc.chalmers.se>"]

[tool.poetry.dependencies]
python = "^3.10.6"
pymc = "^5.0.0"
numpy = "^1.23"
pandas = "^1.4"
pytensor = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
