[tool.poetry]
name = "sakkara"
version = "0.5.3"
description = "Tools for simplified creation of PyMC models"
authors = ["Henrik Håkansson <henrik.hakansson@fcc.chalmers.se>", "Anders Sjöberg <anders.sjoberg@fcc.chalmers.se>"]

[tool.poetry.dependencies]
python = "^3.10"
pymc = "^5.0.0"
numpy = "^1.23"
pandas = "^1.4"
pytensor = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[tool.poetry.group.dev.dependencies]
sphinx = "^6.1.3"
sphinx-book-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
